--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -31,7 +31,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 <h1 class="heading mb-1 ps-4 text-md leading-tight text-text-500 md:px-0 md:text-4xl max-md:pe-[--price-width]">
     <?= $block->getChildBlock('product.title')->getPageHeading() ?>
 </h1>
-<div class="animate-on-transition px-4 leading-tight md:px-0 md:text-base max-md:mb-4 max-md:pe-[--price-width]">
+<div class="animate-on-transition px-4 leading-tight md:px-0 md:text-base mb-4 md:mb-7 max-md:pe-[--price-width]">
   <?= $block->getChildHtml('product.info.review') ?>
 </div>
 
@@ -39,7 +39,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 <?= $block->getChildHtml("alert.urls") ?>
 
 <!-- Price -->
-<div class="animate-on-transition px-4 ps-2 leading-tight md:mb-8 md:mt-7 md:px-0 max-md:absolute max-md:right-0">
+<div class="animate-on-transition px-4 ps-2 leading-tight md:mb-8 z-10 md:px-0 max-md:absolute max-md:right-0">
   <div role="group" aria-label="<?= $escaper->escapeHtmlAttr('Price') ?>">
     <?= $block->getChildHtml("product.info.price") ?>
     <?php if ($productType === 'bundle' || true): ?>
@@ -54,7 +54,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     <?php if ($shortDescription = $productViewModel->getShortDescription()): ?>
       <div class="mb-4"><?= $shortDescription ?></div>
     <?php endif; ?>
-    
+
     <!-- Attributes table -->
     <dl class="mb-8">
       <?php foreach ($block->getAttributes() as $attributeConfig):
@@ -68,7 +68,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
       <?php endforeach; ?>
     </dl>
   </div>
-  
+
   <div>
     <!-- Options -->
     <template x-if="!$store.main.isMobile || <?= (int) in_array($productType, ['simple', 'virtual']) ?>">
@@ -77,7 +77,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         <?= $block->getChildHtml('product_options_wrapper_bottom') ?>
       </div>
     </template>
-    
+
     <div class="flex flex-col sm:flex-row items-end mb-4">
       <?php if ($product->isSaleable()): ?>
         <div
@@ -89,7 +89,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         >
           <?= $block->getChildHtml('product.actions') ?>
         </div>
-    
+
         <!-- StickyProductActionsPopup -->
         <?php
         $stickyActions = <<<HTML
@@ -119,27 +119,27 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             </template>
         HTML;
         ?>
-    
+
         <?= $popup
           ->setData(['id' => 'product_bottom_actions'])
           ->setChildHtml($stickyActions)
           ->render() ?>
         <!-- StickyProductActionsPopup -->
-    
+
         <!-- Product actions popup -->
         <?php
         $popup_id = 'product_actions-' . $product->getId();
-        $options = $block->getChildBlock('product.info.form')->setData(['is_popup' => true])->toHtml();
-    
+        $options = $block->getChildBlock('product.info.form') ? $block->getChildBlock('product.info.form')->setData(['is_popup' => true])->toHtml() : '';
+
         $options .= $block->getChildHtml('product_options_wrapper_bottom');
-    
+
         $productActions = <<<HTML
             <template x-if="\$store.main.isMobile">
               <div class="contents">
                 <div class="max-md:mx-2" id="product-options">
                   {$options}
                 </div>
-    
+
                 <div class="min-h-20 md:hidden"></div>
                   <template x-portal="document.getElementById('popup-fixed-content-portal')">
                     <div x-show="\$store.popup.currentPopup === productActionsPopup">
@@ -163,14 +163,14 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         <!-- Product actions popup -->
       <?php endif; ?>
     </div>
-    
+
     <!-- TODO: What is this? -->
     <?php if ($product->isSaleable()): ?>
       <div class="flex mt-4 justify-end">
         <?= $block->getChildHtml('addtocart.shortcut.buttons') ?>
       </div>
     <?php endif; ?>
-    
+
     <div class="flex mt-4 justify-end">
       <?php
         // TODO: Implement add to wishtlist / add to compare
@@ -182,7 +182,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     <!-- TODO: What is this? -->
       <?= $block->getChildHtml('product.info.additional.actions') ?>
     </div>
-    
+
     <!-- TODO: What is this? -->
     <?php if ($tierPriceBlock = $block->getChildHtml("product.price.tier")): ?>
       <div class="py-4 my-2 tier-price-container">
@@ -190,7 +190,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         $tierPriceBlock ?>
       </div>
     <?php endif; ?>
-    
+
     <!-- TODO: What is this? -->
     <?= $block->getChildHtml("product.info.additional") ?>
   </div>
